# snake_game

./: Cargo.toml
src/: colors.rs  direction.rs  input.rs  main.rs  position.rs  region.rs  snake.rs  tiles.rs  world.rs  world_gen.rs
