[package]
name = "snake_game"
version = "0.1.0"
authors = ["João <jvcmv.jvcmarcenes@gmail.com>"]
edition = "2021"
repository = "https://github.com/jvcmarcenes/snake_game"
license = "MIT"
keywords = ["snake", "game"]
categories = ["games"]

[dependencies]
bevy = "0.9.1"
bracket-noise = "0.8.7"
iyes_loopless = "0.9.1"
